feat:add li element

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
   </head>
   <body>
     <h1>Today Goal List</h1>
-    <div>
-      <input type="text" />
-      <button></button>
+    <div class="row">
+      <input type="text" class="input-box" placeholder="Add your text"/>
+      <button>Add</button>
     </div>
-    <div class="list"></div>
+      <ul class="list-container">
+        <li>Task 1</li>
+        <li>Task 2</li>
+        <li>Task 3</li>
+      </ul>
   </body>
 </html>
