--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Eat The Frog</h1>
     <div class="row">
       <input type="text" class="input-box" placeholder="Add your text" />
-      <button>
+      <button onclick="addList()">
         <svg
           stroke="currentColor"
           fill="currentColor"
@@ -30,7 +30,7 @@
     <ul class="list-container">
       <li>
         <svg
-          class="list-icon"
+          class="icon-check"
           stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
@@ -44,8 +44,25 @@
           ></path>
           <path
             d="M9.999 13.587L7.7 11.292 6.288 12.708 10.001 16.413 16.707 9.707 15.293 8.293z"
-          ></path></svg
-        ><p class="list-task">Task 1</p>
+          ></path>
+        </svg>
+        <p class="task-name">Task 1</p>
+        <svg
+          class="icon-uncheck"
+          stroke="currentColor"
+          fill="currentColor"
+          stroke-width="0"
+          viewBox="0 0 16 16"
+          height="1em"
+          width="1em"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M7.116 8l-4.558 4.558.884.884L8 8.884l4.558 4.558.884-.884L8.884 8l4.558-4.558-.884-.884L8 7.116 3.442 2.558l-.884.884L7.116 8z"
+          ></path>
+        </svg>
       </li>
       <li>
         <svg
@@ -59,9 +76,27 @@
         >
           <path
             d="M12,2C6.486,2,2,6.486,2,12c0.001,5.515,4.487,10.001,10,10.001c5.514,0,10-4.486,10.001-10.001 C22.001,6.486,17.515,2,12,2z M12,20.001c-4.41,0-7.999-3.589-8-8.001c0-4.411,3.589-8,8-8c4.412,0,8.001,3.589,8.001,8 C20,16.412,16.411,20.001,12,20.001z"
-          ></path></svg
-        >Task 2
+          ></path>
+        </svg>
+        <p class="list-name">Task 2</p>
+        <svg
+          class="icon-closed"
+          stroke="currentColor"
+          fill="currentColor"
+          stroke-width="0"
+          viewBox="0 0 16 16"
+          height="1em"
+          width="1em"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M7.116 8l-4.558 4.558.884.884L8 8.884l4.558 4.558.884-.884L8.884 8l4.558-4.558-.884-.884L8 7.116 3.442 2.558l-.884.884L7.116 8z"
+          ></path>
+        </svg>
       </li>
     </ul>
+    <script src="./src/script.js" type="module"></script>
   </body>
 </html>
