--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
   <body>
     <h1>Eat The Frog</h1>
     <div class="row">
-      <input type="text" class="input-box" placeholder="Add your text" />
-      <button onclick="addList()">
+      <input
+        type="text"
+        class="input-box"
+        placeholder="Add your text"
+      />
+      <button class="add-button">
         <svg
           stroke="currentColor"
           fill="currentColor"
@@ -28,7 +32,7 @@
       </button>
     </div>
     <ul class="list-container">
-      <li>
+      <!-- <li>
         <svg
           class="icon-check"
           stroke="currentColor"
@@ -80,7 +84,7 @@
         </svg>
         <p class="list-name">Task 2</p>
         <svg
-          class="icon-closed"
+          class="icon-remove-task"
           stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
@@ -95,7 +99,7 @@
             d="M7.116 8l-4.558 4.558.884.884L8 8.884l4.558 4.558.884-.884L8.884 8l4.558-4.558-.884-.884L8 7.116 3.442 2.558l-.884.884L7.116 8z"
           ></path>
         </svg>
-      </li>
+      </li> -->
     </ul>
     <script src="./src/script.js" type="module"></script>
   </body>
