--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Eat The Frog</h1>
-    <div class="row">
+    <div class="add-task-container">
       <input
         type="text"
         class="input-box"
