--- a/index.html
+++ b/index.html
@@ -10,18 +10,14 @@
   <body>
     <h1>Eat The Frog</h1>
     <div class="add-task-container">
-      <input
-        type="text"
-        class="input-box"
-        placeholder="Add your text"
-      />
-      <button class="add-button">
+      <input type="text" class="input-box" placeholder="Add your text" />
+      <div class="add-button">
         <svg
           stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewBox="0 0 448 512"
-          height="1em"
+          height="100%"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
         >
@@ -29,10 +25,14 @@
             d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
           ></path>
         </svg>
-      </button>
+      </div>
     </div>
-    <ul class="list-container">
-    </ul>
+    <div class="progress-container">
+      <div class="progress-bar">
+        <span class="progress-percentage"></span>
+      </div>
+    </div>
+    <ul class="list-container"></ul>
     <script src="./src/script.js" type="module"></script>
   </body>
 </html>
