feat:working on progress bar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       </div>
     </div>
     <div class="progress-container">
+      <p class="progress-text">50% Completed</p>
       <div class="progress-bar">
         <span class="progress-percentage"></span>
       </div>
