Add main actions

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   </head>
   <body>
     <h1>Eat The Frog</h1>
+    <div class="main-actions">
+      <button>Save</button>
+      <button>Export</button>
+      <button>Upload</button>
+    </div>
     <div class="row">
-      <input
-        type="text"
-        class="input-box"
-        placeholder="Add your text"
-      />
+      <input type="text" class="input-box" placeholder="Add your text" />
       <button class="add-button">
         <svg
           stroke="currentColor"
