Add action buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <body>
     <h1>Eat The Frog</h1>
     <div class="main-actions">
-      <button>Save</button>
-      <button>Export</button>
-      <button>Upload</button>
+      <button class="main-actions--save">Save</button>
+      <button class="main-actions--restore">Restore</button>
+      <button class="main-actions--export">Export</button>
+      <button class="main-actions--upload">Upload</button>
     </div>
     <div class="row">
       <input type="text" class="input-box" placeholder="Add your text" />
