Add upload file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       <button class="main-actions--restore">Restore</button>
       <button class="main-actions--export">Export</button>
       <button class="main-actions--upload">Upload</button>
+      <input
+        id="upload-file"
+        type="file"
+        accept="application/json"
+        style="display: none"
+      />
     </div>
     <div class="row">
       <input type="text" class="input-box" placeholder="Add your text" />
